force-app/main/default/objects/Measure__c/Measure__c.object-meta.xml
<CustomObject>
    <description>A unit of measurement used in a recipe</description>
    <label>Measure</label>
    <nameField>
        <displayFormat>MEAS-{0000}</displayFormat>
        <label>Measure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>