force-app/main/default/objects/Measure__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <description>Abbreviation of Measure Name e.g Tablespoon --&gt; tbsp</description>
    <inlineHelpText>Abbreviation of Measure Name e.g Tablespoon --&gt; tbsp</inlineHelpText>
    <label>Abbreviation</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>