force-app/main/default/objects/Measure__c/fields/Conversion_to_grams__c.field-meta.xml
<CustomField>
    <fullName>Conversion_to_grams__c</fullName>
    <description>(Solid measure) conversion of a single unit of this measure to grams</description>
    <inlineHelpText>(Solid measure) conversion of a single unit of this measure to grams</inlineHelpText>
    <label>Conversion to grams</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>