force-app/main/default/objects/Measure__c/fields/Discrete_Continuous__c.field-meta.xml
<CustomField>
    <fullName>Discrete_Continuous__c</fullName>
    <description>Discrete or Continuous Measure (dependent on Solid/Liquid Measure)</description>
    <inlineHelpText>Discrete or Continuous Measure (dependent on Solid/Liquid Measure)</inlineHelpText>
    <label>Discrete or Continuous Measure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Solid_or_Liquid__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Continuous</fullName>
                <default>true</default>
                <label>Continuous</label>
            </value>
            <value>
                <fullName>Discrete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>