force-app/main/default/objects/Measure__c/fields/Solid_or_Liquid__c.field-meta.xml
<CustomField>
    <fullName>Solid_or_Liquid__c</fullName>
    <description>Solid or Liquid Measure</description>
    <inlineHelpText>Solid or Liquid Measure</inlineHelpText>
    <label>Solid or Liquid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solid</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>