force-app/main/default/objects/Measure__c/fields/UniqueName__c.field-meta.xml
<CustomField>
    <fullName>UniqueName__c</fullName>
    <description>Unique name of this measure (used by recipe controller to create ingredient records)</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique name of this measure (used by recipe controller to create ingredient records)</inlineHelpText>
    <label>Unique Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>